Attempting to use HBS to re-create the envoy file as needed in dev.

--- a/.gitignore
+++ b/.gitignore
@@ -63,6 +63,7 @@ typings/
 # dotenv environment variables file
 .env
 !hosting/.env
+hosting/generated-envoy.dev.yaml
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
