--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "publishdev": "lerna run publishdev",
     "publishnpm": "yarn build && lerna publish --force-publish",
     "restore": "npm run clean && npm run bootstrap && npm run build",
-    "nuke": "rimraf ~/.budibase && npm run restore && lerna run --parallel dev:stack:nuke",
+    "nuke": "npm run nuke:packages && npm run nuke:docker",
+    "nuke:packages": "npm run restore",
+    "nuke:docker": "lerna run --parallel dev:stack:nuke",
     "clean": "lerna clean",
     "kill-port": "kill-port 4001",
     "dev": "yarn run kill-port && lerna link && lerna run --parallel dev:builder --concurrency 1",
