Update all scripts to use yarn rather than npm

--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "initialise": "lerna run initialise",
     "publishdev": "lerna run publishdev",
     "publishnpm": "yarn build && lerna publish --force-publish",
-    "restore": "npm run clean && npm run bootstrap && npm run build",
-    "nuke": "npm run nuke:packages && npm run nuke:docker",
-    "nuke:packages": "npm run restore",
+    "restore": "yarn run clean && yarn run bootstrap && yarn run build",
+    "nuke": "yarn run nuke:packages && yarn run nuke:docker",
+    "nuke:packages": "yarn run restore",
     "nuke:docker": "lerna run --parallel dev:stack:nuke",
     "clean": "lerna clean",
     "kill-port": "kill-port 4001",
