--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -32,14 +32,14 @@
     }
   },
   "scripts": {
-    "test": "jest --testPathIgnorePatterns=routes && npm run test:integration",
+    "test": "jest --testPathIgnorePatterns=routes && yarn run test:integration",
     "test:integration": "jest --coverage --detectOpenHandles",
     "test:watch": "jest --watch",
     "run:docker": "node src/index",
     "dev:stack:up": "node scripts/dev/manage.js up",
     "dev:stack:down": "node scripts/dev/manage.js down",
     "dev:stack:nuke": "node scripts/dev/manage.js nuke",
-    "dev:builder": "npm run dev:stack:up && nodemon src/index.js",
+    "dev:builder": "yarn run dev:stack:up && nodemon src/index.js",
     "electron": "electron src/electron.js",
     "build:electron": "electron-builder --dir",
     "publish:electron": "electron-builder -mwl --publish always",
