Updating to make sure the envoy generated dev file is very obviously not to be edited.

--- a/hosting/docker-compose.dev.yaml
+++ b/hosting/docker-compose.dev.yaml
@@ -27,7 +27,7 @@ services:
     restart: always
     image: envoyproxy/envoy:v1.16-latest
     volumes:
-      - ./generated-envoy.dev.yaml:/etc/envoy/envoy.yaml
+      - ./.generated-envoy.dev.yaml:/etc/envoy/envoy.yaml
     ports:
       - "${MAIN_PORT}:10000"
     depends_on:
