--- a/packages/builder/package.json
+++ b/packages/builder/package.json
@@ -70,6 +70,8 @@
     "@budibase/string-templates": "^0.8.9",
     "@budibase/svelte-ag-grid": "^1.0.4",
     "@sentry/browser": "5.19.1",
+    "@spectrum-css/page": "^3.0.1",
+    "@spectrum-css/vars": "^3.0.1",
     "@svelteschool/svelte-forms": "0.7.0",
     "codemirror": "^5.59.0",
     "downloadjs": "1.4.7",
