--- a/packages/bbui/package.json
+++ b/packages/bbui/package.json
@@ -43,6 +43,14 @@
     "dist"
   ],
   "dependencies": {
+    "@spectrum-css/actionbutton": "^1.0.1",
+    "@spectrum-css/button": "^3.0.1",
+    "@spectrum-css/checkbox": "^3.0.1",
+    "@spectrum-css/icon": "^3.0.1",
+    "@spectrum-css/label": "^2.0.9",
+    "@spectrum-css/table": "^3.0.1",
+    "@spectrum-css/vars": "^3.0.1",
+    "dayjs": "^1.10.4",
     "markdown-it": "^12.0.4",
     "quill": "^1.3.7",
     "sirv-cli": "^0.4.6",
