--- a/packages/bbui/package.json
+++ b/packages/bbui/package.json
@@ -31,7 +31,7 @@
     "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-svelte-hot": "^0.11.0",
     "semantic-release": "^17.0.8",
-    "svelte": "^3.29.0",
+    "svelte": "^3.37.0",
     "svench": "^0.0.10-7",
     "vite": "^2.1.5"
   },
@@ -44,6 +44,7 @@
   ],
   "dependencies": {
     "@spectrum-css/button": "^3.0.1",
+    "@spectrum-css/buttongroup": "^3.0.1",
     "@spectrum-css/dialog": "^3.0.1",
     "@spectrum-css/divider": "^1.0.1",
     "@spectrum-css/modal": "^3.0.1",
