converts popover to spectrum

--- a/packages/bbui/package.json
+++ b/packages/bbui/package.json
@@ -48,6 +48,7 @@
     "@spectrum-css/dialog": "^3.0.1",
     "@spectrum-css/divider": "^1.0.1",
     "@spectrum-css/modal": "^3.0.1",
+    "@spectrum-css/popover": "^3.0.1",
     "@spectrum-css/underlay": "^2.0.9",
     "markdown-it": "^12.0.4",
     "quill": "^1.3.7",
