--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "build:docker:staging": "cd hosting/scripts/linux/ && ./release-to-docker-hub.sh staging && cd -"
   },
   "dependencies": {
+    "@spectrum-css/actionbutton": "^1.0.1",
     "@spectrum-css/toast": "^3.0.1"
   }
 }
