--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@spectrum-css/actionbutton": "^1.0.1",
     "@spectrum-css/actiongroup": "^1.0.1",
     "@spectrum-css/link": "^3.1.1",
+    "@spectrum-css/menu": "^3.0.1",
     "@spectrum-css/toast": "^3.0.1"
   }
 }
