--- a/packages/bbui/package.json
+++ b/packages/bbui/package.json
@@ -57,6 +57,7 @@
     "@spectrum-css/modal": "^3.0.1",
     "@spectrum-css/popover": "^3.0.1",
     "@spectrum-css/table": "^3.0.1",
+    "@spectrum-css/tabs": "^3.0.1",
     "@spectrum-css/toast": "^3.0.1",
     "@spectrum-css/typography": "^3.0.1",
     "@spectrum-css/underlay": "^2.0.9",
