--- a/packages/bbui/package.json
+++ b/packages/bbui/package.json
@@ -2,38 +2,35 @@
   "name": "@budibase/bbui",
   "description": "A UI solution used in the different Budibase projects.",
   "version": "1.58.13",
+  "license": "AGPL-3.0",
   "svelte": "src/index.js",
   "module": "dist/bbui.es.js",
   "exports": {
     ".": {
       "import": "./dist/bbui.es.js"
     },
+    "./internal": {
+      "import": "./dist/internal.es.js"
+    },
     "./package.json": "./package.json",
     "./dist/style.css": "./dist/style.css"
   },
   "scripts": {
-    "dev:builder": "vite build",
-    "build": "vite build"
+    "dev:builder": "rollup -cw",
+    "build": "rollup -c"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^16.0.0",
     "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^11.0.0",
-    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.5",
+    "@rollup/plugin-node-resolve": "^11.2.1",
     "cross-env": "^7.0.2",
     "nollup": "^0.14.1",
     "postcss": "^8.2.9",
-    "rollup": "^2.34.0",
-    "rollup-plugin-copy": "^3.3.0",
-    "rollup-plugin-delete": "^1.2.0",
-    "rollup-plugin-hot": "^0.1.1",
-    "rollup-plugin-node-builtins": "^2.1.2",
+    "rollup": "^2.45.2",
     "rollup-plugin-postcss": "^4.0.0",
-    "rollup-plugin-svelte-hot": "^0.11.0",
-    "semantic-release": "^17.0.8",
-    "svelte": "^3.37.0",
-    "svench": "^0.0.10-7",
-    "vite": "^2.1.5"
+    "rollup-plugin-svelte": "^7.1.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "svelte": "^3.37.0"
   },
   "keywords": [
     "svelte"
@@ -50,20 +47,22 @@
     "@spectrum-css/checkbox": "^3.0.1",
     "@spectrum-css/dialog": "^3.0.1",
     "@spectrum-css/divider": "^1.0.1",
+    "@spectrum-css/fieldlabel": "^3.0.1",
     "@spectrum-css/icon": "^3.0.1",
     "@spectrum-css/label": "^2.0.9",
     "@spectrum-css/link": "^3.1.1",
     "@spectrum-css/menu": "^3.0.1",
     "@spectrum-css/modal": "^3.0.1",
+    "@spectrum-css/picker": "^1.0.1",
     "@spectrum-css/popover": "^3.0.1",
     "@spectrum-css/table": "^3.0.1",
+    "@spectrum-css/textfield": "^3.0.1",
     "@spectrum-css/toast": "^3.0.1",
     "@spectrum-css/underlay": "^2.0.9",
     "@spectrum-css/vars": "^3.0.1",
     "dayjs": "^1.10.4",
     "markdown-it": "^12.0.4",
     "quill": "^1.3.7",
-    "sirv-cli": "^0.4.6",
     "svelte-flatpickr": "^2.4.0",
     "svelte-portal": "^1.0.0",
     "turndown": "^7.0.0"
