--- a/packages/worker/package.json
+++ b/packages/worker/package.json
@@ -44,6 +44,7 @@
     "server-destroy": "^1.0.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "pouchdb-adapter-memory": "^7.2.2"
   }
 }
