Updating auth lib so that it takes in a pouch instance rather than creating its own.

--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -12,7 +12,6 @@
     "passport-google-auth": "^1.0.2",
     "passport-google-oauth": "^2.0.0",
     "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0",
-    "pouchdb": "^7.2.2"
+    "passport-local": "^1.0.0"
   }
 }
