--- a/packages/bbui/package.json
+++ b/packages/bbui/package.json
@@ -62,10 +62,7 @@
     "@spectrum-css/underlay": "^2.0.9",
     "@spectrum-css/vars": "^3.0.1",
     "dayjs": "^1.10.4",
-    "markdown-it": "^12.0.4",
-    "quill": "^1.3.7",
     "svelte-flatpickr": "^2.4.0",
-    "svelte-portal": "^1.0.0",
-    "turndown": "^7.0.0"
+    "svelte-portal": "^1.0.0"
   }
 }
