--- a/packages/bbui/package.json
+++ b/packages/bbui/package.json
@@ -9,7 +9,9 @@
     ".": {
       "import": "./dist/bbui.es.js"
     },
-    "./package.json": "./package.json"
+    "./package.json": "./package.json",
+    "./spectrum-icons-rollup.js": "./src/spectrum-icons-rollup.js",
+    "./spectrum-icons-vite.js": "./src/spectrum-icons-vite.js"
   },
   "scripts": {
     "build": "rollup -c"
@@ -35,6 +37,7 @@
     "dist"
   ],
   "dependencies": {
+    "@adobe/spectrum-css-workflow-icons": "^1.2.1",
     "@spectrum-css/actionbutton": "^1.0.1",
     "@spectrum-css/actiongroup": "^1.0.1",
     "@spectrum-css/button": "^3.0.1",
@@ -65,7 +68,7 @@
     "@spectrum-css/underlay": "^2.0.9",
     "@spectrum-css/vars": "^3.0.1",
     "dayjs": "^1.10.4",
-    "svelte-flatpickr": "^2.4.0",
+    "svelte-flatpickr": "^3.1.0",
     "svelte-portal": "^1.0.0"
   }
 }
