wip: initial tags

--- a/packages/bbui/package.json
+++ b/packages/bbui/package.json
@@ -62,6 +62,7 @@
     "@spectrum-css/switch": "^1.0.2",
     "@spectrum-css/table": "^3.0.1",
     "@spectrum-css/tabs": "^3.0.1",
+    "@spectrum-css/tags": "^3.0.2",
     "@spectrum-css/textfield": "^3.0.1",
     "@spectrum-css/toast": "^3.0.1",
     "@spectrum-css/treeview": "^3.0.2",
