--- a/packages/bbui/package.json
+++ b/packages/bbui/package.json
@@ -40,6 +40,7 @@
     "@adobe/spectrum-css-workflow-icons": "^1.2.1",
     "@spectrum-css/actionbutton": "^1.0.1",
     "@spectrum-css/actiongroup": "^1.0.1",
+    "@spectrum-css/avatar": "^3.0.2",
     "@spectrum-css/button": "^3.0.1",
     "@spectrum-css/buttongroup": "^3.0.1",
     "@spectrum-css/checkbox": "^3.0.2",
