Implements SideNavigation component

--- a/packages/bbui/package.json
+++ b/packages/bbui/package.json
@@ -60,6 +60,7 @@
     "@spectrum-css/progresscircle": "^1.0.2",
     "@spectrum-css/radio": "^3.0.2",
     "@spectrum-css/search": "^3.0.2",
+    "@spectrum-css/sidenav": "^3.0.2",
     "@spectrum-css/switch": "^1.0.2",
     "@spectrum-css/table": "^3.0.1",
     "@spectrum-css/tabs": "^3.0.1",
