--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,7 @@
 {
     "editor.formatOnSave": true,
-    "eslint.format.enable": true,
     "editor.codeActionsOnSave": {
         "source.fixAll": true
     },
-    "[svelte]": {
-        "editor.defaultFormatter": "JamesBirtles.svelte-vscode"
-    },
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
+    "editor.defaultFormatter": "svelte.svelte-vscode"
 }
