--- a/packages/worker/package.json
+++ b/packages/worker/package.json
@@ -36,6 +36,7 @@
     "koa-session": "^5.12.0",
     "koa-static": "^5.0.0",
     "node-fetch": "^2.6.1",
+    "nodemailer": "^6.5.0",
     "passport-google-oauth": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
