--- a/packages/worker/package.json
+++ b/packages/worker/package.json
@@ -46,7 +46,9 @@
     "server-destroy": "^1.0.1"
   },
   "devDependencies": {
+    "jest": "^26.6.3",
     "nodemon": "^2.0.7",
-    "pouchdb-adapter-memory": "^7.2.2"
+    "pouchdb-adapter-memory": "^7.2.2",
+    "supertest": "^6.1.3"
   }
 }
