--- a/packages/worker/package.json
+++ b/packages/worker/package.json
@@ -19,7 +19,7 @@
   "author": "Budibase",
   "license": "AGPL-3.0-or-later",
   "dependencies": {
-    "@budibase/auth": "0.0.1",
+    "@budibase/auth": "^0.18.6",
     "@budibase/string-templates": "^0.8.16",
     "@koa/router": "^8.0.0",
     "aws-sdk": "^2.811.0",
