Updating testing system across the board after playing around with it, having the worker tests run when top level test is ran, fixing environment in worker when testing, removing the use of redis (replacing with ioredis-mock) when in test.

--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -15,5 +15,8 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "ioredis-mock": "^5.5.5"
   }
 }
