--- a/packages/worker/package.json
+++ b/packages/worker/package.json
@@ -14,7 +14,8 @@
   "scripts": {
     "run:docker": "node src/index.js",
     "dev:stack:init": "node ./scripts/dev/manage.js init",
-    "dev:builder": "npm run dev:stack:init && nodemon src/index.js"
+    "dev:builder": "npm run dev:stack:init && nodemon src/index.js",
+    "test": "jest --runInBand"
   },
   "author": "Budibase",
   "license": "AGPL-3.0-or-later",
@@ -50,5 +51,11 @@
     "nodemon": "^2.0.7",
     "pouchdb-adapter-memory": "^7.2.2",
     "supertest": "^6.1.3"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "setupFiles": [
+      "./scripts/jestSetup.js"
+    ]
   }
 }
