--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -127,7 +127,7 @@
     "pouchdb-replication-stream": "1.2.9",
     "sanitize-s3-objectkey": "0.0.1",
     "server-destroy": "1.0.1",
-    "svelte": "3.30.0",
+    "svelte": "^3.38.2",
     "tar-fs": "2.1.0",
     "to-json-schema": "0.2.5",
     "uuid": "3.3.2",
