Updating to support SMTP email automation action, as well as some general work around from and subject which previously we'ren't fully implemented.

--- a/hosting/docker-compose.yaml
+++ b/hosting/docker-compose.yaml
@@ -16,7 +16,7 @@ services:
       MINIO_URL: http://minio-service:9000
       MINIO_ACCESS_KEY: ${MINIO_ACCESS_KEY}
       MINIO_SECRET_KEY: ${MINIO_SECRET_KEY}
-      HOSTING_KEY: ${HOSTING_KEY}
+      INTERNAL_KEY: ${INTERNAL_KEY}
       BUDIBASE_ENVIRONMENT: ${BUDIBASE_ENVIRONMENT}
       PORT: 4002
       JWT_SECRET: ${JWT_SECRET}
@@ -44,7 +44,7 @@ services:
       COUCH_DB_USERNAME: ${COUCH_DB_USER}
       COUCH_DB_PASSWORD: ${COUCH_DB_PASSWORD}
       COUCH_DB_URL: http://${COUCH_DB_USER}:${COUCH_DB_PASSWORD}@couchdb-service:5984
-      SELF_HOST_KEY: ${HOSTING_KEY}
+      INTERNAL_KEY: ${INTERNAL_KEY}
       REDIS_URL: redis-service:6379
       REDIS_PASSWORD: ${REDIS_PASSWORD}
     depends_on:
