Changing INTERNAL_KEY to INTERNAL_API_KEY.

--- a/hosting/hosting.properties
+++ b/hosting/hosting.properties
@@ -9,7 +9,7 @@ MINIO_SECRET_KEY=budibase
 COUCH_DB_PASSWORD=budibase
 COUCH_DB_USER=budibase
 REDIS_PASSWORD=budibase
-INTERNAL_KEY=budibase
+INTERNAL_API_KEY=budibase
 
 # This section contains variables that do not need to be altered under normal circumstances
 APP_PORT=4002
