General cleanup, doing away with the concept of hosting in the builder and the generally confusing difference between cloud, self hosting and running locally - server is simply always a server now.

--- a/packages/worker/package.json
+++ b/packages/worker/package.json
@@ -2,7 +2,7 @@
   "name": "@budibase/worker",
   "email": "hi@budibase.com",
   "version": "0.8.16",
-  "description": "Budibase Deployment Server",
+  "description": "Budibase background service",
   "main": "src/index.js",
   "repository": {
     "type": "git",
