--- a/packages/standard-components/manifest.json
+++ b/packages/standard-components/manifest.json
@@ -1381,7 +1381,7 @@
   },
   "dataprovider": {
     "name": "Data Provider",
-    "info": "Pagination can only be used with data sources that are tables.",
+    "info": "Pagination is only available for data stored in internal tables.",
     "icon": "Data",
     "styleable": false,
     "hasChildren": true,
