--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,10 +27,10 @@ jobs:
           SENTRY_DSN: ${{ secrets.SENTRY_DSN }}
       - run: yarn test
 
-      - name: Publish budibase packages to NPM
-        env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: yarn release
+      # - name: Publish budibase packages to NPM
+      #   env:
+      #     NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+      #   run: yarn release
 
       - name: Build/release Docker images
         env:
