--- a/packages/worker/package.json
+++ b/packages/worker/package.json
@@ -13,6 +13,7 @@
   ],
   "scripts": {
     "run:docker": "node src/index.js",
+    "build:docker": "docker build . -t worker-service",
     "dev:stack:init": "node ./scripts/dev/manage.js init",
     "dev:builder": "npm run dev:stack:init && nodemon src/index.js",
     "test": "jest --runInBand"
