--- a/hosting/docker-compose.yaml
+++ b/hosting/docker-compose.yaml
@@ -5,8 +5,7 @@ version: "3"
 services:
   app-service:
     restart: always
-    #build: ./build/server
-    image: budibase/budibase-apps
+    image: budibase/apps
     ports:
       - "${APP_PORT}:4002"
     environment:
@@ -30,8 +29,7 @@ services:
 
   worker-service:
     restart: always
-    #build: ./build/worker
-    image: budibase/budibase-worker
+    image: budibase/worker
     ports:
       - "${WORKER_PORT}:4003"
     environment:
