--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -66,7 +66,8 @@
       "!src/tests/**/*",
       "!src/automations/tests/**/*",
       "!src/utilities/fileProcessor.js",
-      "!src/utilities/fileSystem/**/*"
+      "!src/utilities/fileSystem/**/*",
+      "!src/utilities/redis.js"
     ],
     "coverageReporters": [
       "lcov",
