--- a/hosting/docker-compose.yaml
+++ b/hosting/docker-compose.yaml
@@ -105,6 +105,8 @@ services:
     restart: always
     image: redis
     command: redis-server --requirepass ${REDIS_PASSWORD}
+    ports:
+      - "${REDIS_PORT}:6379"
     volumes:
       - redis_data:/data
 
