Default logo URL in navigation component and add setting to hide logo

--- a/packages/standard-components/manifest.json
+++ b/packages/standard-components/manifest.json
@@ -338,6 +338,12 @@
         "type": "text",
         "label": "Logo URL",
         "key": "logoUrl"
+      },
+      {
+        "type": "boolean",
+        "label": "Hide logo",
+        "key": "hideLogo",
+        "defaultValue": false
       }
     ]
   },
