Remove login form component

--- a/packages/builder/src/components/design/AppPreview/componentStructure.json
+++ b/packages/builder/src/components/design/AppPreview/componentStructure.json
@@ -61,8 +61,7 @@
     "icon": "More",
     "children": [
       "screenslot",
-      "navigation",
-      "login"
+      "navigation"
     ]
   }
 ]
