--- a/packages/worker/package.json
+++ b/packages/worker/package.json
@@ -26,6 +26,7 @@
     "@koa/router": "^8.0.0",
     "aws-sdk": "^2.811.0",
     "bcryptjs": "^2.4.3",
+    "dockerode": "^3.3.0",
     "dotenv": "^8.2.0",
     "got": "^11.8.1",
     "joi": "^17.4.0",
