Improve client performance and add action to control data provider queries

--- a/packages/builder/src/components/design/AppPreview/componentStructure.json
+++ b/packages/builder/src/components/design/AppPreview/componentStructure.json
@@ -18,7 +18,8 @@
       "longformfield",
       "datetimefield",
       "attachmentfield",
-      "relationshipfield"
+      "relationshipfield",
+      "daterangepicker"
     ]
   },
   {
