--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -107,8 +107,11 @@
     "zlib": "1.0.5"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.3",
+    "@babel/preset-env": "^7.14.4",
     "@budibase/standard-components": "^0.9.19",
     "@jest/test-sequencer": "^24.8.0",
+    "babel-jest": "^27.0.2",
     "docker-compose": "^0.23.6",
     "eslint": "^6.8.0",
     "express": "^4.17.1",
