Add default setting to date range picker and add info text

--- a/packages/standard-components/manifest.json
+++ b/packages/standard-components/manifest.json
@@ -1511,6 +1511,7 @@
     "icon": "Date",
     "styleable": true,
     "hasChildren": false,
+    "info": "Your data provider will be automatically filtered to the given date range.",
     "settings": [
       {
         "type": "dataProvider",
@@ -1521,6 +1522,20 @@
         "type": "field",
         "label": "Date field",
         "key": "field"
+      },
+      {
+        "type": "select",
+        "label": "Default range",
+        "key": "defaultValue",
+        "options": [
+          "Last 1 day",
+          "Last 7 days",
+          "Last 30 days",
+          "Last 3 months",
+          "Last 6 months",
+          "Last 1 year"
+        ],
+        "defaultValue": "Last 30 days"
       }
     ]
   }
