--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -18,6 +18,7 @@
     "dev:builder": "rollup -cw"
   },
   "dependencies": {
+    "@budibase/bbui": "^0.9.27",
     "@budibase/string-templates": "^0.9.27",
     "regexparam": "^1.3.0",
     "shortid": "^2.2.15",
