Fix icon for hAlign center in containers

--- a/packages/standard-components/manifest.json
+++ b/packages/standard-components/manifest.json
@@ -41,7 +41,7 @@
           {
             "label": "Middle",
             "value": "middle",
-            "barIcon": "AlignMiddle"
+            "barIcon": "AlignCenter"
           },
           {
             "label": "Right",
