Add type setting to forms and fix inheriting initial values

--- a/packages/standard-components/manifest.json
+++ b/packages/standard-components/manifest.json
@@ -1024,6 +1024,13 @@
     ],
     "settings": [
       {
+        "type": "select",
+        "label": "Type",
+        "key": "type",
+        "options": ["Create", "Update"],
+        "defaultValue": "Create"
+      },
+      {
         "type": "schema",
         "label": "Schema",
         "key": "dataSource"
