--- a/packages/standard-components/manifest.json
+++ b/packages/standard-components/manifest.json
@@ -1026,7 +1026,7 @@
       {
         "type": "select",
         "label": "Type",
-        "key": "type",
+        "key": "actionType",
         "options": ["Create", "Update"],
         "defaultValue": "Create"
       },
