Update autoscreens to have new container props

--- a/packages/standard-components/manifest.json
+++ b/packages/standard-components/manifest.json
@@ -39,8 +39,8 @@
             "barIcon": "AlignLeft"
           },
           {
-            "label": "Middle",
-            "value": "middle",
+            "label": "Center",
+            "value": "center",
             "barIcon": "AlignCenter"
           },
           {
